fix the bug, add some code to hide and solve the warning