@@ -11,6 +11,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>21</maven.compiler.release>
         <junit.version>5.12.1</junit.version>
     </properties>
 
@@ -22,7 +23,7 @@
             <version>21.0.6</version>
         </dependency>
 
-        <!-- JavaFX FXML-->
+        <!-- JavaFX FXML -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
@@ -52,15 +53,30 @@
         </dependency>
     </dependencies>
 
-
     <build>
         <plugins>
+            <!-- changeplugin to remove obsolete -source warning -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <release>${maven.compiler.release}</release>
+                </configuration>
+            </plugin>
+
+            <!-- JavaFX plugin -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.comp2042.Main</mainClass>
+                    <options>
+                        <!-- Silences warnings -->
+                        <option>--enable-native-access=javafx.graphics</option>
+                        <option>--enable-native-access=javafx.media</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
